styles.css
* {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
}

:root {
    --color-bg: #f5f8fa;
    --color-main: #000;
}
body {
    background-color: var(--color-bg);
}

header {
    width: 100%;
    height: 3em;
    display: flex;
    justify-content: flex-end;
}

.button-container {
    margin: 0.5em;
    width: 6em;
    height: 3em;
    background-color: #000;
    border-radius: 5em;
    display: flex;
    border: 0.2em #414141 solid;
}

.theme-switch {
    padding: 0;
    background-color: rgba(0,0,0,0);
    border: none;
    cursor: pointer;
    margin: 0em 0em 0em 1em;
}

.themeIcon {
    width: 1.8em;
    height: 1.8em;
    background-color:#fff;
    border-radius: 50%;
    transition: background-color 0.3s, transform 0.3s;
}

.form-container {
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center; 
    padding: 3em;
}

form {
    width: 25em;
    padding: 2em;
    border: 3px #cfdee5 solid;
    background-color: #fff;
    box-shadow: 0 8px 16px rgba(0,0,0,0.07);
}

.form-header, .form-footer {
    margin: 1em 0 1em;
}

.username {
    background-color: #f5f8fa;
    border: none;
    border-bottom: 3px solid #cfdee5;
    padding: 0.5em;
}

.comment{
    width: 100%;
    height: 100%;
    border: none;
    border-bottom: 3px solid #cfdee5;
    background-color: #f5f8fa;
    resize: none;
    padding: 0.5em;
}

.username:focus, .comment:focus{
    transition: 0.5s;
    outline: none;
    border-bottom: 3px solid #29b6f6;
}

.form-footer {
    display: flex;
    justify-content: flex-end;
}

.form-footer button {
    color: #fff;
    background-color: #29b6f6;
    border-radius: 2em;
    border: none;
    width: 6em;
    padding: 0.7em;
    cursor: pointer;
    font-size: 13px;
}

.form-footer button:hover {
    transition: transform 0.5s;
    transform: scale(1.05);
}

.comments-list {
    margin: 0 auto;
    display: flex;
    flex-flow: wrap;
    justify-content: center;
    align-items: center; 
    padding: 3em;
    max-width: 29em;
}

.user-comment {
    margin: 0 0 1.5em;
    width: 25em;
    border: 3px #cfdee5 solid;
    padding: 2em;
    background-color: #fff;
    box-shadow: 0 8px 16px rgba(0,0,0,0.07);
}

.comment-header {
    display: flex;
    align-items: center;
    border-bottom: 1px #cfdee5 solid;
    padding: 0.3em;
}

.comment-header img {
    margin: 0 0.5em 0 0em;
}

.info {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.name {
    font-size: 16px;
}

.dateTime {
    font-size: 12px;
    align-self: center;
    color: #757575;
}
.comment-username img{
    margin: 0 0.5em 0 0;
}

.comment-content {
    padding: 0.3em;
}

/* DARK THEME */

body.dark {
   --color-bg: #0c0c0c;
   --color-main: #1523f5;
}

body.dark .button-container {
    border: 0.2em #414141 solid;
}

body.dark .themeIcon {
    transition: background-color 0.3s, transform 0.3s;
    transform: translateX(125%);
    background-color: #fbc02d;
}

body.dark .themeIcon::after {
    background-color: #000;
    content:"";
    display: block;
    height: 1.4em;
    width: 1.2em;
    position: absolute;
    left: -0.1em;

    border-radius: 50%;
}

body.dark form,
body.dark .user-comment {
    background-color: #121212;
    border-color: #414141;
    color: #fff;
}

body.dark .username,
body.dark .comment {
    background-color: #414141;
    color: #fff;
}

